[gd_scene load_steps=4 format=2]

[ext_resource path="res://Jogador.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Spawnar.gd" type="Script" id=2]
[ext_resource path="res://Hud.tscn" type="PackedScene" id=3]

[node name="Palco" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Jogador" parent="." instance=ExtResource( 1 )]
position = Vector2( 104.433, 346.805 )

[node name="Hud" parent="." instance=ExtResource( 3 )]

[node name="TimerPontuacao" type="Timer" parent="."]

[connection signal="area_entered" from="Jogador" to="." method="_on_Jogador_area_entered"]
[connection signal="comecarJogo" from="Hud" to="." method="_on_Hud_comecarJogo"]
[connection signal="timeout" from="TimerPontuacao" to="." method="_on_TimerPontuacao_timeout"]
